--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-router-redux": "^4.0.8",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "repository": {
     "type": "git",
